made some changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
-{% extends "layouts/home.html" %} {% block content %}
+{% extends "layouts/home.html" %}<!---->{% block title %} Welcome to a
+Revolutionary Money Making Platform {% endblock title %}<!---->
+{% block content %}<!---->
 <div class="banner-area">
   <div id="particles-js"></div>
   <div class="container">
@@ -473,7 +475,7 @@
         <div class="plan-area">
           <div class="plan-item">
             <div class="plan_name">Beginner plan</div>
-            <div class="plan_day">5 %</div>
+            <div class="plan_day">20 %</div>
             <div class="plan_pr">Daily / 1 Times</div>
 
             <div>
@@ -487,7 +489,7 @@
               </ul>
             </div>
 
-            <div class="plan_min">Min. $500 <span>Max: $9999</span></div>
+            <div class="plan_min">Min. $100 <span>Max: $999</span></div>
 
             <a
               href="#"
@@ -504,7 +506,7 @@
         <div class="plan-area">
           <div class="plan-item">
             <div class="plan_name">Professional plan</div>
-            <div class="plan_day">10 %</div>
+            <div class="plan_day">40 %</div>
             <div class="plan_pr">3 DAYS / 1 Times</div>
 
             <div>
@@ -518,7 +520,7 @@
               </ul>
             </div>
 
-            <div class="plan_min">Min. $10000 <span>Max: $49999</span></div>
+            <div class="plan_min">Min. $1000 <span>Max: $4999</span></div>
 
             <a
               href="#"
@@ -536,7 +538,7 @@
           <div class="plan-item">
             <div class="plan_name">Expert plan</div>
             <div class="plan_day">15 %</div>
-            <div class="plan_pr">10 DAYS / 1 Times</div>
+            <div class="plan_pr">60 DAYS / 1 Times</div>
 
             <div>
               <ul>
@@ -549,7 +551,7 @@
               </ul>
             </div>
 
-            <div class="plan_min">Min. $50000 <span>Max: Unlimited</span></div>
+            <div class="plan_min">Min. $5000 <span>Max: Unlimited</span></div>
 
             <a
               href="#"
