--- a/templates/plan.html
+++ b/templates/plan.html
@@ -1,4 +1,6 @@
-{% extends "layouts/home.html" %} {% block content %}
+{% extends "layouts/home.html" %}
+<!---->{% block title %} Investment plans {% endblock title %}<!---->
+{% block content %}
 
 <div class="inner-banner-area">
   <div id="particles-js"></div>
@@ -27,7 +29,7 @@
         <div class="plan-area">
           <div class="plan-item">
             <div class="plan_name">Beginner plan</div>
-            <div class="plan_day">5 %</div>
+            <div class="plan_day">20 %</div>
             <div class="plan_pr">Daily / 1 Times</div>
 
             <div>
@@ -41,7 +43,7 @@
               </ul>
             </div>
 
-            <div class="plan_min">Min. $500 <span>Max: $9999</span></div>
+            <div class="plan_min">Min. $100 <span>Max: $999</span></div>
 
             <a
               href="#"
@@ -58,7 +60,7 @@
         <div class="plan-area">
           <div class="plan-item">
             <div class="plan_name">Professional plan</div>
-            <div class="plan_day">10 %</div>
+            <div class="plan_day">40 %</div>
             <div class="plan_pr">3 DAYS / 1 Times</div>
 
             <div>
@@ -72,7 +74,7 @@
               </ul>
             </div>
 
-            <div class="plan_min">Min. $10000 <span>Max: $49999</span></div>
+            <div class="plan_min">Min. $1000 <span>Max: $4999</span></div>
 
             <a
               href="#"
@@ -89,7 +91,7 @@
         <div class="plan-area">
           <div class="plan-item">
             <div class="plan_name">Expert plan</div>
-            <div class="plan_day">15 %</div>
+            <div class="plan_day">60 %</div>
             <div class="plan_pr">10 DAYS / 1 Times</div>
 
             <div>
@@ -103,7 +105,7 @@
               </ul>
             </div>
 
-            <div class="plan_min">Min. $50000 <span>Max: Unlimited</span></div>
+            <div class="plan_min">Min. $5000 <span>Max: Unlimited</span></div>
 
             <a
               href="#"
