--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,4 +1,6 @@
-{% extends "layouts/home.html" %} {% block content %}
+{% extends "layouts/home.html" %}
+<!---->{% block title %} Privacy policy {% endblock title %}<!---->
+{% block content %}
 
 <div class="inner-banner-area">
   <div id="particles-js"></div>
@@ -20,24 +22,25 @@
             <div class="container">
               <div class="row">
                 <div class="col-12 col-md-12">
-                  <h1>{{ domain }}Privacy Policy</h1>
+                  <h1>{{ domain }} Privacy Policy</h1>
                   <p><b>[Last Update: 2022.02.09]</b></p>
 
                   <p>
-                    This Privacy Policy constitutes a part of Capital Crypto
-                    Gains Terms of Use (the “TOU”). The terms used in this
-                    Privacy Policy shall have the same meanings as in the TOU
-                    except as otherwise provided herein.
+                    This Privacy Policy constitutes a part of {{ domain }} Gains
+                    Terms of Use (the “TOU”). The terms used in this Privacy
+                    Policy shall have the same meanings as in the TOU except as
+                    otherwise provided herein.
                   </p>
 
                   <p>
-                    This Privacy Policy explains how {{ domain }}and {{ domain
-                    }}Operators collect, use, process, disclose, share,
-                    transfer, and protect personal information obtained through
-                    {{ domain }}and its partners. The terms “we,” “us,” and
-                    “our” refer to {{ domain }} and {{ domain }}Operators. When
-                    we ask for certain personal information from users, it is
-                    because we are required by applicable laws or government
+                    This Privacy Policy explains how {{ domain }} and
+                    <!---->
+                    {{ domain }} Operators collect, use, process, disclose,
+                    share, transfer, and protect personal information obtained
+                    through {{ domain }} and its partners. The terms “we,” “us,”
+                    and “our” refer to {{ domain }} and {{ domain }} Operators.
+                    When we ask for certain personal information from users, it
+                    is because we are required by applicable laws or government
                     orders to collect such information or it is relevant for our
                     specified purposes.
                   </p>
@@ -46,7 +49,7 @@
                     <b
                       >Please carefully read the full content of this Privacy
                       Policy. When visiting {{ domain }} , regardless of whether
-                      or not you register for or log in the Capital Crypto Gains
+                      or not you register for or log in the {{ domain }} Gains
                       Services, you acknowledge, understand, and consent to all
                       articles described in this Privacy Policy.</b
                     >
@@ -70,13 +73,13 @@
                   <p><b>1. INFORMATION WE COLLECT</b></p>
                   <p>
                     The followings are the types of information we collect when
-                    you register for and use {{ domain }}Services:
+                    you register for and use {{ domain }} Services:
                   </p>
                   <p>
                     <b>1.1 Information You Provide to Us When Registering</b>
                   </p>
                   <p>
-                    When you create a {{ domain }}Account, you provide us with
+                    When you create a {{ domain }} Account, you provide us with
                     your email address, name, date of birth, nationality,
                     country code, gender, signature, utility bills, home
                     address, password, and other information to help us identify
@@ -87,7 +90,7 @@
 
                   <p>
                     If you agree to use biometric authentication methods to log
-                    in or use {{ domain }}services, such as fingerprint
+                    in or use {{ domain }} services, such as fingerprint
                     recognition and facial recognition, you need to provide us
                     with the corresponding information, such as the fingerprint
                     information and facial information, and your consent to the
@@ -105,7 +108,7 @@
                     industry regulatory standards, and government orders in
                     different aspects such as Anti-Money Laundering (AML),
                     Know-Your-Client (KYC), and Counter-Terrorist Financing
-                    (CTF), {{ domain }}is required to collect personal
+                    (CTF), {{ domain }} is required to collect personal
                     information in addition to Identification Information, such
                     as identity documents (including passport, driver's license,
                     national identity card, state ID card, tax ID number,
@@ -119,13 +122,13 @@
                     collected information as the global industry regulatory
                     standards, local regulatory standards or government orders
                     change. This provision applies to both personal and
-                    institutional {{ domain }}Accounts.
+                    institutional {{ domain }} Accounts.
                   </p>
 
                   <p>
                     <b
-                      >1.3 Information We Collect as You Use Capital Crypto
-                      Gains Services</b
+                      >1.3 Information We Collect as You Use {{ domain }} Gains
+                      Services</b
                     >
                   </p>
                   <p><b>a Service Usage Information </b></p>
@@ -138,7 +141,7 @@
                     information derived from SIM card, network operator, IP
                     address, GPS, base station and WLAN (“Service Usage
                     Information”). This information may be directly obtained by
-                    {{ domain }}or through third-party service providers. The
+                    {{ domain }} or through third-party service providers. The
                     collection of Service Usage Information helps our systems to
                     ensure that our interface is accessible for users across all
                     platforms and can aid during criminal investigations.
@@ -147,7 +150,7 @@
                   <p><b>b Transaction Information </b></p>
                   <p>
                     For all personal and institutional user accounts, we may
-                    collect transaction information as you use Capital Crypto
+                    collect transaction information as you use {{ domain }}
                     Gains Services, including but not limited to deposit
                     snapshots, account balances, trade history (such as
                     transaction initiation, payment method, price, quantity,
@@ -184,7 +187,7 @@
                     You agree that, for the purposes disclosed in this Privacy
                     Policy, we are entitled to collect and use the information
                     contained in or related to your financial information when
-                    you use {{ domain }}Services, including without limitation,
+                    you use {{ domain }} Services, including without limitation,
                     bank account information, payment card primary account
                     number (PAN), transaction history, trading data, and/or tax
                     identification. We collect such financial information to
@@ -195,7 +198,7 @@
 
                   <p><b>2. HOW WE COLLECT INFORMATION</b></p>
                   <p>
-                    <b>2.1 Information {{ domain }}Automatically Collects</b>
+                    <b>2.1 Information {{ domain }} Automatically Collects</b>
                   </p>
                   <p>
                     Most of the personal information that we collect is directly
@@ -204,7 +207,7 @@
                   </p>
 
                   <p>
-                    a. where you register for, log in or visit Capital Crypto
+                    a. where you register for, log in or visit {{ domain }}
                     Gains, or use any service of {{ domain }} ; <br />
                     b. where you voluntarily complete any user survey or provide
                     feedback to us via email or any other channel; <br />
@@ -212,7 +215,7 @@
                     visiting or using our website or APPs; <br />
                     d. other situations where we may automatically collect your
                     information as mentioned in this Privacy Policy or our TOU
-                    (including the {{ domain }}Platform Rules, the same below).
+                    (including the {{ domain }} Platform Rules, the same below).
                     <br />
                   </p>
 
@@ -264,7 +267,7 @@
                   </p>
                   <p>
                     We use the information collected to deliver, maintain and
-                    provide better {{ domain }}Services (including but not
+                    provide better {{ domain }} Services (including but not
                     limited to processing transactions) and verify Users’
                     identities.
                   </p>
@@ -272,11 +275,11 @@
                   <p>
                     We use the IP address and unique identifiers stored in your
                     device’s cookies to help us authenticate your identity and
-                    activities and provide {{ domain }}Services. Given our legal
-                    obligations and system requirements, we cannot provide you
-                    with all or some of {{ domain }} Services without data like
-                    Identification Information, Supervision Information, Service
-                    Usage Information, Communication Information, and
+                    activities and provide {{ domain }} Services. Given our
+                    legal obligations and system requirements, we cannot provide
+                    you with all or some of {{ domain }} Services without data
+                    like Identification Information, Supervision Information,
+                    Service Usage Information, Communication Information, and
                     Transaction Information.
                   </p>
 
@@ -325,7 +328,7 @@
                   </p>
                   <p>
                     We actively measure and analyze data to understand the way
-                    you use and interact with {{ domain }}Services. This review
+                    you use and interact with {{ domain }} Services. This review
                     activity is conducted by our operation teams to continually
                     improve our Platforms’ performance and to resolve issues
                     with the user experience. In addition, we use such
@@ -350,10 +353,10 @@
                     information for confirming each communication, we will not
                     be able to respond to your submitted requests, questions,
                     and inquiries. All direct communications are properly kept
-                    at {{ domain }}or the service provider designated by Capital
-                    Crypto Gains, to be reviewed for accuracy, to be kept as
-                    evidence, or to be used to perform other statutory or
-                    contractual obligations.
+                    at {{ domain }} or the service provider designated by
+                    Capital Crypto Gains, to be reviewed for accuracy, to be
+                    kept as evidence, or to be used to perform other statutory
+                    or contractual obligations.
                   </p>
 
                   <p><b>3.6 To Enforce Our TOU and Other Agreements </b></p>
@@ -369,7 +372,7 @@
 
                   <p>
                     {{ domain }}reserves the right to suspend or terminate
-                    provision of any {{ domain }}Services to any User found to
+                    provision of any {{ domain }} Services to any User found to
                     be engaged in activities that violate our TOU and other
                     agreements with our Users.
                   </p>
@@ -379,8 +382,8 @@
                       >3.7 To Facilitate Corporate Acquisitions, Mergers, or
                       Transactions
                     </b>
-                    We may process any information regarding your Capital Crypto
-                    Gains Account and use of {{ domain }}Services as is
+                    We may process any information regarding your {{ domain }}
+                    Gains Account and use of {{ domain }} Services as is
                     necessary in the context of corporate acquisitions, mergers,
                     or other corporate transactions.
                   </p>
@@ -429,7 +432,7 @@
 
                   <p><b>5. HOW WE STORE AND PROTECT USER DATA </b></p>
                   <p>
-                    {{ domain }}has kept your personal information safe using
+                    {{ domain }} has kept your personal information safe using
                     fault-tolerant secured storage with industry standard
                     encryption and implemented a number of security measures to
                     ensure that your information is not lost, abused, or
@@ -486,15 +489,16 @@
                   <p>
                     If you suspect that your personal information has been
                     compromised, especially account and/or password information,
-                    please lock your {{ domain }}Account and immediately contact
-                    {{ domain }}Customer Support team at support@{{domain}}.
+                    please lock your {{ domain }} Account and immediately
+                    contact {{ domain }} Customer Support team at
+                    support@{{domain}}.
                   </p>
 
                   <p>
                     Unless otherwise stipulated by law or the TOU, you agree
                     that we have the right but not the obligation to retain all
                     the collected personal information for the duration of your
-                    {{ domain }}Account for 5 more years after the account is
+                    {{ domain }} Account for 5 more years after the account is
                     closed.
                   </p>
 
@@ -542,8 +546,9 @@
 
                   <p>
                     a. to keep you signed in; <br />
-                    b. to record your habits and preferences when browsing {{
-                    domain }} ; <br />
+                    b. to record your habits and preferences when browsing
+                    <!---->
+                    {{ domain }} ; <br />
                     c. to record our performance and verify the effectiveness of
                     online advertising through Google Stats with cookies.
                   </p>
@@ -620,8 +625,9 @@
                     specifically reminded by us, you have the right to request
                     us to restrict the processing of your personal information;
                     however, you understand that such restriction of the
-                    processing may prevent us from providing you with some of {{
-                    domain }}Services.
+                    processing may prevent us from providing you with some of
+                    <!---->
+                    {{ domain }} Services.
                   </p>
 
                   <p><b>8.5 Right to Object</b></p>
@@ -657,34 +663,35 @@
                   <p><b> 9.2 Privacy Policies of {{ domain }} </b></p>
                   <p>
                     This Privacy Policy applies to all platforms, websites, and
-                    departments of {{ domain }} .com and Capital Crypto Gains
-                    ecosystem. If you visit any link to any sub-platforms of {{
-                    domain }} , you should agree with and abide by the separate
-                    and independent privacy policies of such sub-platforms. If
-                    the privacy policy of any sub-platform conflicts with this
-                    Privacy Policy, the privacy policy of such sub-platform
-                    shall prevail.
+                    departments of {{ domain }} .com and {{ domain }} Gains
+                    ecosystem. If you visit any link to any sub-platforms of
+                    <!---->{{ domain }} , you should agree with and abide by the
+                    separate and independent privacy policies of such
+                    sub-platforms. If the privacy policy of any sub-platform
+                    conflicts with this Privacy Policy, the privacy policy of
+                    such sub-platform shall prevail.
                   </p>
 
                   <p><b>10. CHANGES TO THIS PRIVACY POLICY</b></p>
                   <p>
-                    From time to time, {{ domain }}may revise this Privacy
+                    From time to time, {{ domain }} may revise this Privacy
                     Policy to reflect changes in Law or our personal-data
                     collection, processing, and use practices. Changes to this
                     Privacy Policy will be announced by posting on the
                     {{domain}}. You shall regularly review the Privacy Policy
                     and pay attention to its revisions. If you do not agree with
-                    the revised content, you shall stop accessing {{ domain
-                    }}immediately. When an updated version of the Privacy Policy
-                    is released, your continued access to {{ domain }}means that
-                    you agree to the updated content and agree to abide by the
-                    updated Privacy Policy.
+                    the revised content, you shall stop accessing
+                    <!---->{{ domain }} immediately. When an updated version of
+                    the Privacy Policy is released, your continued access to
+                    <!---->
+                    {{ domain }} means that you agree to the updated content and
+                    agree to abide by the updated Privacy Policy.
                   </p>
 
                   <p><b> 11. CONTACT US </b></p>
                   <p>
                     We are committed to respecting the freedoms and rights of
-                    all our {{ domain }}Users. Should have any questions or
+                    all our {{ domain }} Users. Should have any questions or
                     concerns regarding this Privacy Policy, or if you would like
                     to file a data protection request, please refer to our
                     Frequently Asked Questions at {{domain}} and contact us on
