--- a/templates/rules.html
+++ b/templates/rules.html
@@ -1,4 +1,7 @@
-{% extends "layouts/home.html" %} {% block content %}
+{% extends "layouts/home.html" %}
+<!---->{% block title %} Rules {% endblock title %}<!---->
+
+{% block content %}
 
 <div class="inner-banner-area">
   <div id="particles-js"></div>
