--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends "layouts/auth.html" %}
 <!---->
-{% block title %} Create a new account {% endblock title %} {% block content %}
+{% block title %}Login into your account {% endblock title %}
+<!---->
+{% block content %}
 <!-- login area start -->
 <div class="login-area login-bg">
   <div class="container">
