--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,4 +1,6 @@
-{% extends "layouts/home.html" %} {% block content %}
+{% extends "layouts/home.html" %}
+<!---->{% block title %} Our blog {% endblock title %}<!---->
+{% block content %}
 
 <div class="inner-banner-area">
   <div id="particles-js"></div>
