--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,6 @@
-{% extends "layouts/home.html" %} {% block content %}
+{% extends "layouts/home.html" %}
+<!---->{% block title %} Contact us {% endblock title %}<!---->
+{% block content %}
 
 <div class="inner-banner-area">
   <div id="particles-js"></div>
