--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{% block title %} {% endblock title %} | {{doamin}}</title>
+    <title>{% block title %} {% endblock title %} | {{domain}}</title>
     <!-- favicon -->
     <link
       rel="icon"
@@ -34,7 +34,7 @@ other assets."
       content="An investment company is a corporation or trust engaged in the business of investing pooled capital into financial securities. Investment companies make profits by buying and selling shares,property,bonds,cash,A reliable and professional company where you can invest your money and we will utilize it and offer you the best returns of your investment. ..."
     />
     <!-- Apple Stuff -->
-    <link rel="apple-touch-icon" href="/assets/images/logoIcon/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/images/logoIcon/logoi.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="{{ domain }}- Home" />
@@ -185,11 +185,11 @@ other assets."
           <nav class="navbar navbar-expand-lg p-0 mx-5">
             <a class="site-logo site-title" href="/">
               <img
-                src="/assets/images/logoIcon/logo.png"
+                src="/assets/images/logoIcon/logoi.png"
                 class="logo-max"
-                alt="<span>Capital Crypto</span> Gains"
+                alt="<span>Capital </span> Profit"
               />
-              <span class="site-name"><span>Capital Crypto</span> Gains</span>
+              <span class="site-name"><span>Capital</span> Profit</span>
             </a>
             <button
               class="navbar-toggler ml-auto"
@@ -288,7 +288,7 @@ other assets."
           <div class="col-lg-12 text-center">
             <a href="/" class="text-center">
               <img
-                src="/assets/images/logoIcon/logo.png"
+                src="/assets/images/logoIcon/logoi.png"
                 class="logo-max"
                 alt="logo"
               />
