--- a/templates/superadmin/withdraw_email.html
+++ b/templates/superadmin/withdraw_email.html
@@ -141,7 +141,7 @@
                   "
                 >
                   <img
-                    src="https://earntrue.money/assets/images/logo.png"
+                    src="https://capitalprofit.org/assets/images/logoIcon/logoi.png"
                     width="160"
                     style="display: block; border: 0px; width: 160px"
                     alt=""
