--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -337,7 +337,10 @@ other assets."
         </div>
       </div>
     </div>
-
+    <script
+      src="//code.tidio.co/i6lqjtotnslfl15qltdof1cknc3jdzoy.js"
+      async
+    ></script>
     <!-- jquery -->
     <script src="/assets/templates/basic/js/jquery-3.3.1.min.js"></script>
     <!-- migarate-jquery -->
@@ -465,6 +468,4 @@ other assets."
       });
     </script>
   </body>
-
-  <!-- Mirrored from {{ domain }}/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 22 Nov 2022 07:24:13 GMT -->
 </html>
