--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,9 @@ Revolutionary Money Making Platform {% endblock title %}<!---->
           and we will utilize it and offer you the best returns of your
           investment.
         </p>
-        <a href="#" class="btn btn-default website-color mt-1 mb-1">SIGN UP</a>
+        <a href="/register/" class="btn btn-default website-color mt-1 mb-1"
+          >SIGN UP</a
+        >
       </div>
       <div class="col-lg-6">
         <div class="coin_main">
