--- a/templates/layouts/users.html
+++ b/templates/layouts/users.html
@@ -37,8 +37,8 @@
       href="/assets/users/vendor/glightbox/css/glightbox.css"
     />
     <link rel="stylesheet" href="/assets/users/css/animate.min.css" />
-    <link rel="stylesheet" href="/assets/users/css/style.min.css" />
-    <link rel="stylesheet" href="/assets/users/css/responsive.min.css" />
+    <link rel="stylesheet" href="/assets/users/css/style.css" />
+    <link rel="stylesheet" href="/assets/users/css/responsive.css" />
     <link rel="stylesheet" href="/assets/users/css/slick.min.css" />
     <link rel="stylesheet" href="/assets/users/css/slick-theme.min.css" />
     <link rel="stylesheet" href="/assets/users/css/jquery-ui.min.css" />
