--- a/assets/users/css/responsive.css
+++ b/assets/users/css/responsive.css
@@ -122,6 +122,7 @@
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+        flex-direction: column !important;
     }
     .user-statistic__item {
         width: 50%;
@@ -258,6 +259,12 @@
     .tip-card .tip-balance ul li h4 {
         font-size: 16px;
     }
+
+    .user-statistic__value {
+        
+        font-size: 24px;
+         
+    }
 }
 
 @media (max-width: 767px) and (min-width:571px) {}
@@ -321,7 +328,7 @@
         width: 50%;
     }
     .user-statistic__item {
-        width: 50%;
+        width: 100%;
     }
 }
 
