--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -18,7 +18,7 @@
         <div class="user-statistic__value" id="load1">
           <span> $<b>{{user.deposit_balance}}</b> </span>
         </div>
-        <div class="user-statistic__title">deposits Balance</div>
+        <div class="user-statistic__title">Deposits Balance</div>
       </div>
     </div>
     <div class="user-statistic__item">
