--- a/assets/users/css/style.css
+++ b/assets/users/css/style.css
@@ -3590,7 +3590,7 @@
     
     .user-statistic__value {
         font-family: "PFBeauSansPro-Black";
-        font-size: 2.75em;
+        font-size: 30px;
         line-height: 1;
         color: #DA5344;
         margin-bottom: 6px;
