--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@ Revolutionary Money Making Platform {% endblock title %}<!---->
       <div class="col-lg-6">
         <h1 class="title py-5">Revolutionary Money Making Platform!</h1>
         <p class="pb-5">
-          A reliable and professional company where you can invest your money
-          and we will utilize it and offer you the best returns of your
-          investment.
+          ក្រុមហ៊ុនដែលអាចទុកចិត្តបាន និងប្រកបដោយវិជ្ជាជីវៈ
+          ដែលអ្នកអាចវិនិយោគប្រាក់របស់អ្នក ហើយយើងនឹងប្រើប្រាស់វា
+          ហើយផ្តល់ជូនអ្នកនូវផលចំណេញដ៏ល្អបំផុតនៃការវិនិយោគរបស់អ្នក។
         </p>
         <a href="/register/" class="btn btn-default website-color mt-1 mb-1"
           >SIGN UP</a
