--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,19 @@
-{% extends "layouts/home.html" %}<!---->{% block title %} Welcome to a
-Revolutionary Money Making Platform {% endblock title %}<!---->
+{% extends "layouts/home.html" %}<!---->{% block title %} សូមស្វាគមន៍មកកាន់ ក
+វេទិការកលុយបដិវត្តន៍ {% endblock title %}<!---->
 {% block content %}<!---->
 <div class="banner-area">
   <div id="particles-js"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <h1 class="title py-5">Revolutionary Money Making Platform!</h1>
+        <h1 class="title py-5">វេទិការកលុយបដិវត្តន៍</h1>
         <p class="pb-5">
           ក្រុមហ៊ុនដែលអាចទុកចិត្តបាន និងប្រកបដោយវិជ្ជាជីវៈ
           ដែលអ្នកអាចវិនិយោគប្រាក់របស់អ្នក ហើយយើងនឹងប្រើប្រាស់វា
           ហើយផ្តល់ជូនអ្នកនូវផលចំណេញដ៏ល្អបំផុតនៃការវិនិយោគរបស់អ្នក។
         </p>
         <a href="/register/" class="btn btn-default website-color mt-1 mb-1"
-          >SIGN UP</a
+          >ចុះ​ឈ្មោះ</a
         >
       </div>
       <div class="col-lg-6">
