--- a/templates/layouts/home.html
+++ b/templates/layouts/home.html
@@ -116,7 +116,7 @@ other assets."
       }
     </style>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement(
           {
@@ -125,12 +125,12 @@ other assets."
           "google_translate_element"
         );
       }
-    </script>
+    </script> -->
 
-    <script
+    <!-- <script
       type="text/javascript"
       src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-    ></script>
+    ></script> -->
   </head>
 
   <body class="body-page">
@@ -227,7 +227,7 @@ other assets."
         </div>
       </div>
 
-      <div id="google_translate_element"></div>
+      <!-- <div id="google_translate_element"></div> -->
     </header>
 
     {% block content %} {% endblock content %}
