--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,9 @@
       href="https://www.tradingview.com/markets/"
       rel="noopener"
       target="_blank"
-      ><span class="blue-text">Markets</span></a
+      ><span class="blue-text">ទីផ្សារ</span></a
     >
-    by TradingView
+    ដោយ TradingView
   </div>
   <script
     type="text/javascript"
@@ -75,10 +75,10 @@
     <div class="row justify-content-center mb-4">
       <div class="col-8 text-center">
         <div class="section-header">
-          <h2 class="title">Our Features</h2>
+          <h2 class="title">លក្ខណៈពិសេសរបស់យើង។</h2>
           <p>
-            We will utilize your money providing a source of high income while
-            minimizing the any possibility of risk in a very secure way.
+            យើងនឹងប្រើប្រាស់ប្រាក់របស់អ្នកដែលផ្តល់នូវប្រភពនៃប្រាក់ចំណូលខ្ពស់
+            ខណៈពេលដែលកាត់បន្ថយលទ្ធភាពនៃហានិភ័យណាមួយតាមរបៀបដែលមានសុវត្ថិភាពបំផុត។
           </p>
         </div>
       </div>
@@ -86,11 +86,10 @@
     <div class="feature-wrapper d-flex flex-wrap">
       <div class="feature-area two">
         <div class="feature-item">
-          <h5 class="subtitle">Reliable</h5>
+          <h5 class="subtitle">អាចទុកចិត្តបាន។</h5>
           <p>
-            A huge number of people trust us. We constantly work on improving
-            our system and level of our security to minimize any potential
-            risks.
+            មនុស្សមួយចំនួនធំជឿជាក់លើយើង។ យើងធ្វើការឥតឈប់ឈរលើការកែលម្អប្រព័ន្ធ
+            និងកម្រិតសុវត្ថិភាពរបស់យើង ដើម្បីកាត់បន្ថយហានិភ័យដែលអាចកើតមាន។
           </p>
         </div>
         <div class="feature-item">
