--- a/templates/index.html
+++ b/templates/index.html
@@ -95,15 +95,15 @@
         <div class="feature-item">
           <h5 class="subtitle">Comodo SSL</h5>
           <p>
-            Comodo Essential-SSL Security encryption confirms that the presented
-            content is genuine and legitimate.
+            Comodo Essential-SSL Security encryption
+            បញ្ជាក់ថាខ្លឹមសារដែលបានបង្ហាញគឺពិតប្រាកដ និងស្របច្បាប់។
           </p>
         </div>
         <div class="feature-item">
-          <h5 class="subtitle">Registered Company</h5>
+          <h5 class="subtitle">ក្រុមហ៊ុនដែលបានចុះឈ្មោះ</h5>
           <p>
-            We are a certified company which conducts absolutely legal
-            activities in the legal field. We are certified and safe.
+            យើង​ជា​ក្រុមហ៊ុន​ដែល​មាន​ការ​បញ្ជាក់​ដែល​ធ្វើ​សកម្មភាព​ផ្លូវ​ច្បាប់​យ៉ាង​ពិត​ប្រាកដ​ក្នុង​វិស័យ​ច្បាប់។
+            យើងមានការបញ្ជាក់ និងសុវត្ថិភាព។
           </p>
         </div>
       </div>
@@ -192,25 +192,25 @@
       </div>
       <div class="feature-area">
         <div class="feature-item">
-          <h5 class="subtitle">Quick Withdrawal</h5>
+          <h5 class="subtitle">ការដកប្រាក់រហ័ស</h5>
           <p>
-            Our all retreats are treated spontaneously once requested. Our
-            withdrawal has high maximum limits
+            ការដកថយទាំងអស់របស់យើងត្រូវបានព្យាបាលដោយឯកឯងនៅពេលដែលបានស្នើសុំ។
+            ការដកប្រាក់របស់យើងមានដែនកំណត់អតិបរមាខ្ពស់។
           </p>
         </div>
         <div class="feature-item">
-          <h5 class="subtitle">Strong Protection</h5>
+          <h5 class="subtitle">ការការពារខ្លាំង</h5>
           <p>
-            Customer security is a big priority for us. We constantly work on
-            improving our system and level of our security to minimize any
-            potential risks.
+            សុវត្ថិភាពអតិថិជនគឺជាអាទិភាពដ៏ធំមួយសម្រាប់ពួកយើង។
+            យើងធ្វើការឥតឈប់ឈរលើការកែលម្អប្រព័ន្ធ និងកម្រិតនៃសុវត្ថិភាពរបស់យើង
+            ដើម្បីកាត់បន្ថយការណាមួយ។ ហានិភ័យដែលអាចកើតមាន។
           </p>
         </div>
         <div class="feature-item">
-          <h5 class="subtitle">Protected Website</h5>
+          <h5 class="subtitle">គេហទំព័រការពារ</h5>
           <p>
-            We are using one of the most experienced, professional, and trusted
-            DDoS Protection and mitigation provider.
+            យើងកំពុងប្រើប្រាស់អ្នកផ្តល់ការការពារ និងកាត់បន្ថយ DDoS
+            ដែលមានបទពិសោធន៍ វិជ្ជាជីវៈ និងគួរឱ្យទុកចិត្តបំផុតមួយ។
           </p>
         </div>
       </div>
@@ -232,8 +232,8 @@
     <div class="row justify-content-center">
       <div class="col-10 text-center">
         <div class="section-header mb-5">
-          <h2 class="title">Our Statistics</h2>
-          <p class="section-para">Take a look at our user statistic</p>
+          <h2 class="title">ស្ថិតិរបស់យើង។</h2>
+          <p class="section-para">សូមក្រឡេកមើលស្ថិតិអ្នកប្រើប្រាស់របស់យើង។</p>
         </div>
       </div>
     </div>
@@ -250,7 +250,7 @@
                 5,000
               </h3>
             </div>
-            <p>Total Deposited</p>
+            <p>ប្រាក់បញ្ញើសរុប</p>
           </div>
         </div>
         <div class="counter-item">
@@ -263,7 +263,7 @@
                 2,000
               </h3>
             </div>
-            <p>Total Withdraw</p>
+            <p>ការដកប្រាក់សរុប</p>
           </div>
         </div>
         <div class="counter-item">
@@ -276,7 +276,7 @@
                 500
               </h3>
             </div>
-            <p>Total User</p>
+            <p>អ្នកប្រើប្រាស់សរុប</p>
           </div>
         </div>
       </div>
